@@ -155,7 +155,11 @@ function getContextFromRequest (req, conf, type) {
   var haveBody = body && (chunked || contentLength > 0)
 
   if (haveBody) {
-    if (captureBody) {
+    if (!captureBody) {
+      context.body = '[REDACTED]'
+    } else if (Buffer.isBuffer(body)) {
+      context.body = '<Buffer>'
+    } else {
       if (typeof body !== 'string') {
         body = tryJsonStringify(body) || stringify(body)
       }
@@ -163,8 +167,6 @@ function getContextFromRequest (req, conf, type) {
         body = truncate(body, _MAX_HTTP_BODY_CHARS)
       }
       context.body = body
-    } else {
-      context.body = '[REDACTED]'
     }
   }
 
