@@ -261,6 +261,19 @@ test('#getContextFromRequest()', function (t) {
     t.end()
   })
 
+  t.test('body is a Buffer', function (t) {
+    const conf = { captureBody: 'all' }
+    const requestPropsToTest = ['body', 'json', 'payload']
+    for (const [, prop] of requestPropsToTest.entries()) {
+      const req = getMockReq()
+      req[prop] = Buffer.from('almost, but not quite, entirely unlike a string.')
+      req.headers['content-length'] = req[prop].length
+      const parsed = parsers.getContextFromRequest(req, conf)
+      t.equals(parsed.body, '<Buffer>')
+    }
+    t.end()
+  })
+
   function getMockReq () {
     return {
       httpVersion: '1.1',
